--- a/.github/workflows/main_msdocs-core-sql-green.yml
+++ b/.github/workflows/main_msdocs-core-sql-green.yml
@@ -29,9 +29,9 @@ jobs:
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
       
       - name: dotnet install ef
-        run: donet tool install -g dotnet-ef
+        run: dotnet tool install -g dotnet-ef
 
-      - name: donet bundle migration
+      - name: dotnet bundle migration
         run: dotnet ef migrations bundle --runtime linux-x64 -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
 
       - name: Upload artifact for deployment job
